--- a/src/Style.scss
+++ b/src/Style.scss
@@ -77,3 +77,45 @@ $main-font: "Inter", sans-serif;
         }
     }
 }
+.store-container {
+    width: 85%;
+    margin: auto;
+    .banner-container {
+        position: relative;
+        text-align: center;
+        color: white;
+        font-family: $main-font;
+        text-shadow: 1px 1px 10px black;
+
+        .centered {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        .banner-image {
+            width: 100%;
+            object-fit: cover;
+            height: 250px;
+        }
+    }
+    h1 {
+        font-family: $main-font;
+        font-weight: thin;
+    }
+    label {
+        display: block;
+    }
+
+    .store-top-navigation {
+        display: none;
+    }
+    .store-grid-container {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+    }
+    .store-side-navigation {
+        border-right: 1px solid black;
+    }
+}
