--- a/src/Style.scss
+++ b/src/Style.scss
@@ -84,6 +84,7 @@ h3 {
 .store-container {
     width: 85%;
     margin: auto;
+    padding-bottom: 5rem;
     .banner-container {
         position: relative;
         text-align: center;
@@ -117,11 +118,7 @@ h3 {
         grid-template-columns: repeat(4, 1fr);
         gap: 1rem;
     }
-    .store-side-navigation {
-        grid-column: 1 / 2;
-        grid-row: 1 / span 5;
-        border-right: 2px solid rgba(0, 0, 0, 0.089);
-    }
+
     .store-card {
         text-align: center;
         img {
@@ -138,4 +135,22 @@ h3 {
     gap: 2rem;
     justify-content: center;
     align-items: center;
+    .cart-button {
+        padding: 1rem;
+        margin-top: 1rem;
+        background-color: #018849;
+        color: white;
+        outline: none;
+        border: 0;
+        cursor: pointer;
+        text-transform: uppercase;
+        font-size: 1.25rem;
+    }
+}
+
+.cart-page-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
