Cart functionality done

--- a/src/Style.scss
+++ b/src/Style.scss
@@ -148,9 +148,54 @@ h3 {
     }
 }
 
-.cart-page-container {
+.empty-cart-page-container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+}
+
+.cart-page-container {
+    width: 85%;
+    margin: auto;
+    padding: 2rem 0 2rem 0;
+    .cart-grid-container {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 1rem;
+        align-items: center;
+        justify-content: center;
+        img {
+            height: 150px;
+            width: 150px;
+            padding: 0.5rem;
+        }
+        .qtn-btn {
+            border: 0.1rem solid black;
+            margin: 0.2rem;
+            color: black;
+            padding: 0.25rem 0.5rem 0.25rem 0.5rem;
+            cursor: pointer;
+            transition: all 0.4s;
+        }
+
+        .qtn-btn:hover {
+            background-color: black;
+            color: white;
+        }
+    }
+    h2 {
+        text-align: right;
+    }
+    button {
+        float: right;
+        font-size: 1.5rem;
+        padding: 1rem;
+        margin-top: 1rem;
+        background-color: black;
+        color: white;
+        border: 2px solid black;
+        cursor: pointer;
+        text-transform: uppercase;
+    }
 }
