--- a/src/Style.scss
+++ b/src/Style.scss
@@ -22,7 +22,7 @@ h3 {
         text-align: center;
         color: white;
         text-shadow: 0px 4px 10px rgb(0, 0, 0);
-        width: 40%;
+        width: 60%;
         margin: auto;
         h1,
         h3 {
@@ -75,7 +75,6 @@ h3 {
                 text-align: center;
                 padding: 0.75rem;
                 color: white;
-
                 font-weight: thin;
             }
         }
@@ -158,7 +157,7 @@ h3 {
 .cart-page-container {
     width: 85%;
     margin: auto;
-    padding: 2rem 0 2rem 0;
+    padding: 2rem 0 7.5rem 0;
     .cart-grid-container {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
@@ -197,5 +196,109 @@ h3 {
         border: 2px solid black;
         cursor: pointer;
         text-transform: uppercase;
+    }
+}
+@media screen and (min-width: 3840px) {
+    .hero-container {
+        .hero-card-container {
+            img {
+                width: 1300px;
+                height: 1600px;
+            }
+        }
+    }
+    .store-container {
+        .store-card {
+            img {
+                height: 500px;
+            }
+        }
+    }
+}
+@media screen and (max-width: 1024px) {
+    .hero-container {
+        .hero-card-container {
+            display: block;
+            img {
+                width: 875px;
+                height: auto;
+            }
+            div:nth-child(2) {
+                display: none;
+            }
+        }
+    }
+    .store-container {
+        .store-grid-container {
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+    .product-detail-container {
+        height: 100vh;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .hero-container {
+        .hero-card-container {
+            img {
+                width: 680px;
+            }
+        }
+    }
+    .store-container {
+        .store-grid-container {
+            grid-template-columns: repeat(2, 1fr);
+        }
+        .store-card {
+            text-align: center;
+            img {
+                height: 275px;
+            }
+            color: black;
+        }
+    }
+}
+@media screen and (max-width: 414px) {
+    .hero-container {
+        height: auto;
+        .text-overlay {
+            top: 35%;
+            width: 100%;
+            h1,
+            h3 {
+                padding: 1rem;
+            }
+        }
+        .hero-card-container {
+            img {
+                width: 414px;
+                height: 800px;
+                object-fit: cover;
+            }
+        }
+        div:nth-child(4) {
+            display: none;
+        }
+    }
+    .store-container {
+        .store-grid-container {
+            grid-template-columns: repeat(1, 1fr);
+        }
+    }
+    .product-detail-container {
+        grid-template-columns: repeat(1, 1fr);
+        height: auto;
+        padding: 5rem 0 5rem 0;
+    }
+
+    .cart-page-container {
+        .cart-grid-container {
+            img {
+                height: 80px;
+                width: 80px;
+                padding: 0.5rem;
+            }
+        }
     }
 }
